; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_send_request.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_send_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_LICENCE_NEG = common dso_local global i32 0, align 4
@LICENCE_TAG_REQUEST = common dso_local global i32 0, align 4
@SEC_RANDOM_SIZE = common dso_local global i32 0, align 4
@SEC_MODULUS_SIZE = common dso_local global i32 0, align 4
@SEC_PADDING_SIZE = common dso_local global i32 0, align 4
@LICENCE_TAG_USER = common dso_local global i32 0, align 4
@LICENCE_TAG_HOST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @licence_send_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_send_request(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %14 = load i32, i32* @SEC_LICENCE_NEG, align 4
  store i32 %14, i32* %9, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %10, align 4
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @strlen(i8* %18)
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %10, align 4
  %22 = add nsw i32 128, %21
  %23 = load i32, i32* %11, align 4
  %24 = add nsw i32 %22, %23
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %12, align 4
  %27 = add nsw i32 %26, 2
  %28 = call i32 @sec_init(i32 %25, i32 %27)
  store i32 %28, i32* %13, align 4
  %29 = load i32, i32* %13, align 4
  %30 = load i32, i32* @LICENCE_TAG_REQUEST, align 4
  %31 = call i32 @out_uint16_le(i32 %29, i32 %30)
  %32 = load i32, i32* %13, align 4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @out_uint16_le(i32 %32, i32 %33)
  %35 = load i32, i32* %13, align 4
  %36 = call i32 @out_uint32_le(i32 %35, i32 1)
  %37 = load i32, i32* %13, align 4
  %38 = call i32 @out_uint16(i32 %37, i32 0)
  %39 = load i32, i32* %13, align 4
  %40 = call i32 @out_uint16_le(i32 %39, i32 65281)
  %41 = load i32, i32* %13, align 4
  %42 = load i8*, i8** %5, align 8
  %43 = load i32, i32* @SEC_RANDOM_SIZE, align 4
  %44 = call i32 @out_uint8p(i32 %41, i8* %42, i32 %43)
  %45 = load i32, i32* %13, align 4
  %46 = call i32 @out_uint16(i32 %45, i32 0)
  %47 = load i32, i32* %13, align 4
  %48 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %49 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %50 = add nsw i32 %48, %49
  %51 = call i32 @out_uint16_le(i32 %47, i32 %50)
  %52 = load i32, i32* %13, align 4
  %53 = load i8*, i8** %6, align 8
  %54 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %55 = call i32 @out_uint8p(i32 %52, i8* %53, i32 %54)
  %56 = load i32, i32* %13, align 4
  %57 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %58 = call i32 @out_uint8s(i32 %56, i32 %57)
  %59 = load i32, i32* %13, align 4
  %60 = load i32, i32* @LICENCE_TAG_USER, align 4
  %61 = call i32 @out_uint16(i32 %59, i32 %60)
  %62 = load i32, i32* %13, align 4
  %63 = load i32, i32* %10, align 4
  %64 = call i32 @out_uint16(i32 %62, i32 %63)
  %65 = load i32, i32* %13, align 4
  %66 = load i8*, i8** %7, align 8
  %67 = load i32, i32* %10, align 4
  %68 = call i32 @out_uint8p(i32 %65, i8* %66, i32 %67)
  %69 = load i32, i32* %13, align 4
  %70 = load i32, i32* @LICENCE_TAG_HOST, align 4
  %71 = call i32 @out_uint16(i32 %69, i32 %70)
  %72 = load i32, i32* %13, align 4
  %73 = load i32, i32* %11, align 4
  %74 = call i32 @out_uint16(i32 %72, i32 %73)
  %75 = load i32, i32* %13, align 4
  %76 = load i8*, i8** %8, align 8
  %77 = load i32, i32* %11, align 4
  %78 = call i32 @out_uint8p(i32 %75, i8* %76, i32 %77)
  %79 = load i32, i32* %13, align 4
  %80 = call i32 @s_mark_end(i32 %79)
  %81 = load i32, i32* %13, align 4
  %82 = load i32, i32* %9, align 4
  %83 = call i32 @sec_send(i32 %81, i32 %82)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @sec_init(i32, i32) #1

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @out_uint32_le(i32, i32) #1

declare dso_local i32 @out_uint16(i32, i32) #1

declare dso_local i32 @out_uint8p(i32, i8*, i32) #1

declare dso_local i32 @out_uint8s(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @sec_send(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
